--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,14 +29,23 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Run prettier
+        run: npm run format
+
       - name: Run ESLint
         run: npm run lint
 
       - name: Format code
         run: npm run lint:fix
 
-      - name: Run tests
-        run: npm run test
-
       - name: Build the project
         run: npm run build --if-present
+
+      - name: migrate database
+        run: npm run prisma:migrate
+
+      - name: prisma generate
+        run: npm run postinstall
+
+      - name: Run tests
+        run: npm run test
