--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,8 @@ jobs:
         run: npm run build --if-present
 
       - name: migrate database
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
         run: npm run prisma:migrate
 
       - name: prisma generate
