--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,19 +16,23 @@ jobs:
     strategy:
       matrix:
         node-version: [20.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
+      # Checka ut repository-koden
       - uses: actions/checkout@v4
+
+      # Installera Node.js och npm
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
 
+      # Installera alla beroenden
       - name: Install dependencies
         run: npm ci
 
+      # Kör kodformaterare och linter för kodkvalitet
       - name: Run prettier
         run: npm run format
 
@@ -38,16 +42,20 @@ jobs:
       - name: Format code
         run: npm run lint:fix
 
+      # Bygg projektet (om ett byggskript är definierat)
       - name: Build the project
         run: npm run build --if-present
 
+      # Migrera databasen till senaste versionen
       - name: migrate database
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
         run: npm run prisma:migrate
 
+      # Generera Prisma-klienten för att interagera med databasen
       - name: prisma generate
         run: npm run postinstall
 
+      # Kör enhetstester för projektet
       - name: Run tests
         run: npm run test
