--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
     branches: ['main']
   pull_request:
     branches: ['main']
+    # workflow_dispatch gör att man kan starta körningen av workflowet manuellt på github
   workflow_dispatch:
 
 jobs:
