--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,5 +59,5 @@ jobs:
         run: npm run postinstall
 
       # Kör enhetstester för projektet
-      - name: Run tests
+      - name: Run tests with coverage
         run: npm run test
