--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,13 @@ jobs:
       # Checka ut repository-koden
       - uses: actions/checkout@v4
 
+      # Cache node_modules
+      - name: Cache node_modules
+        uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: npm-deps-${{ hashFiles('package-lock.json') }}
+
       # Installera Node.js och npm
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
@@ -49,6 +56,13 @@ jobs:
       - name: Build the project
         run: npm run build --if-present
 
+      # Save build artifacts
+      - name: Save build artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-artifacts
+          path: build/
+
       # Migrera databasen till senaste versionen
       - name: migrate database
         env:
@@ -62,3 +76,15 @@ jobs:
       # Kör enhetstester för projektet
       - name: Run tests with coverage
         run: npm run test
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      # Get build artifacts
+      - name: Download build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: build-artifacts
+          path: build/
